--- a/app/globals.css
+++ b/app/globals.css
@@ -44,7 +44,7 @@ body {
 
   .navIsland-base {
     box-shadow: var(--shadow-elevation-low);
-    @apply fixed px-4 py-3 top-6 left-1/2 -translate-x-1/2 z-50 w-max min-w-96 flex gap-3 justify-between items-center bg-surfaceContainer text-onSurfaceContainer
+    @apply fixed px-4 py-3 top-6 left-1/2 -translate-x-1/2 z-50 w-max min-w-96 bg-surfaceContainer text-onSurfaceContainer
   }
 
   .input-base {
